feat: update meal history
